Fix truncated logo issue

--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,7 @@
   outline: none;
   flex-grow: 1;
   min-width: 0;
+  width: 100%;
   -webkit-appearance: none;
   border-radius: 0.25rem;
 }
